Release history for Dist-Zilla-Role-BundleDeps

{{$NEXT}}

0.002002 2015-05-05T22:26:50Z 2ee6cf4
 [Dependencies::Stats]
 - Dependencies changed since 0.002001, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +10 ↑3 -2 (recommends: +1, suggests: ↑2)
 - runtime: ↓1 -1
 - test: +1 (recommends: +1 ↑1 ↓1)

 [Documentation]
 - Crossreference Dzil::Plugin::BundleInspector (Thanks Olivier Mengué/DOLMEN)
 - Closes #1

 [Metadata]
 - show 1x contributor
 - author = cpan

0.002001 2014-08-16T02:13:11Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - whitespace reduced.
 - metadata updated.
 - tests updated.

 [Dependencies::Stats]
 - Dependencies changed since 0.002000, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1 (suggests: ↑1)
 - test: +1 -3 (recommends: ↑1 -1)

 [Metadata]
 - migrate to kentnl org.

 [Misc]
 - Improve source side POD to reduce build side whitespace.

 [Tests]
 - Updated Test::ReportPrereqs

0.002000 2014-07-14T13:02:42Z
 [00 Major]
 - Mostly changes that might affect downstreams that work by hand.

 [01 Tooling]
 - Switched to EUMM ( https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f )
 - Toolkit Dependencies softened to recommendations.

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +9 -11 (suggests: +2 -1)
 - runtime: +1 ↑1
 - test: +4 ↓1 (recommends: +4)

0.001001 2013-11-24T15:32:47Z
 [00 Minor]
 - Maint release.

 [Dependencies::Noteworthy]
 - use Module::Build 0.4202
 - use Test::More 1.001002

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +1 ↑3 ↓1 -1
 - test: ↑1 -3

 [Documentation]
 - README.mkdn → metacpan links

 [Tests]
 - use Test::Compile::PerFile

0.001000 2013-11-04T18:04:56Z
 - First version.
