@@ -1,2 +1,11 @@
-.build
-Dist-Zilla-Role-BundleDeps-*
+/.build
+/tmp/
+/Dist-Zilla-Role-BundleDeps-*
+/MYMETA.json
+/MYMETA.yml
+/META.yml
+/META.json
+/Makefile
+/Makefile.old
+/blib/
+/pm_to_blib
