@@ -31,4 +31,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
  - Test::More 1.001003
 
 0.001001 2013-11-24T15:32:47Z
-
